--- a/portal.html
+++ b/portal.html
@@ -14,11 +14,13 @@
     <header class="nav">
       <div class="nav-inner">
         <nav class="nav-group nav-left"></nav>
-        <a class="nav-brand" href="/">
+        <a class="nav-brand" href="/" aria-label="Aura Calistenia">
           <span class="brand-mark" aria-hidden="true"></span>
-          <span class="brand-text">AURA CALISTENIA</span>
         </a>
         <nav class="nav-group nav-right">
+          <a href="/">Inicio</a>
+        </nav>
+        <nav class="nav-group nav-compact" aria-label="Navegación">
           <a href="/">Inicio</a>
         </nav>
       </div>
