cambios panel entreno 2

--- a/index.html
+++ b/index.html
@@ -354,6 +354,6 @@
       <div class="footer-bottom">Aura Calistenia - 2026</div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
