--- a/portal.html
+++ b/portal.html
@@ -37,6 +37,6 @@
         {{PORTAL_CONTENT}}
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
