--- a/admin.html
+++ b/admin.html
@@ -228,6 +228,6 @@
         </div>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
