arreglo panel admin y NEON

--- a/admin.html
+++ b/admin.html
@@ -33,204 +33,214 @@
         {{ADMIN_MESSAGE}}
       </div>
 
-      <div class="container admin-stack">
-        {{COACH_DASHBOARD}}
-        {{PLAN_EDITOR}}
-        {{CONTENT_FORM}}
+      <div class="container admin-section-tabs" id="admin_section_tabs">
+        <button class="admin-section-tab is-active" type="button" data-admin-section="inicio">Inicio</button>
+        <button class="admin-section-tab" type="button" data-admin-section="alumnos">Alumnos</button>
       </div>
 
-      <div class="container admin-grid">
-        <div class="admin-card glass-card">
-          <h3>Crear alumno</h3>
-          <form class="admin-form" action="/admin/clients/add" method="post">
-            <div class="form-row">
-              <div class="form-field">
-                <label for="client_username">Usuario</label>
-                <input id="client_username" name="client_username" type="text" required>
-              </div>
-              <div class="form-field">
-                <label for="client_password">Contraseña</label>
-                <input id="client_password" name="client_password" type="password" required>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-field">
-                <label for="client_email">Email</label>
-                <input id="client_email" name="client_email" type="email" required>
-              </div>
-              <div class="form-field">
-                <label for="client_skill">Skill</label>
-                <input id="client_skill" name="client_skill" type="text">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-field">
-                <label for="client_level">Nivel</label>
-                <input id="client_level" name="client_level" type="text">
-              </div>
-              <div class="form-field">
-                <label for="client_goal">Objetivo</label>
-                <input id="client_goal" name="client_goal" type="text">
-              </div>
-            </div>
-            <div class="form-field">
-              <label for="client_concerns">Inquietudes</label>
-              <input id="client_concerns" name="client_concerns" type="text">
-            </div>
-            <label class="checkbox-field">
-              <input type="checkbox" name="client_approved" checked>
-              Activar alumno al crear
-            </label>
-            <button class="btn glass primary" type="submit">Crear alumno</button>
-          </form>
-        </div>
+      <div class="container admin-stack admin-section-panel" data-admin-section-panel="inicio">
+        {{CONTENT_FORM}}
 
-        <div class="admin-card glass-card">
-          <h3>Solicitudes de alumnos</h3>
-          <ul class="admin-list">
-            {{APPLICATION_LIST}}
-          </ul>
-        </div>
-
-        <div class="admin-card glass-card">
-          <h3>Agregar competición</h3>
-          <form class="admin-form" action="/admin/events/add" method="post">
-            <div class="form-field">
-              <label for="event_title">Título</label>
-              <input id="event_title" name="title" type="text" required>
-            </div>
-            <div class="form-row">
+        <div class="admin-grid">
+          <div class="admin-card glass-card">
+            <h3>Agregar competición</h3>
+            <form class="admin-form" action="/admin/events/add" method="post">
               <div class="form-field">
-                <label for="event_date">Fecha</label>
-                <input id="event_date" name="date" type="text" placeholder="Ej: 16-19 ABR 2026" required>
+                <label for="event_title">Título</label>
+                <input id="event_title" name="title" type="text" required>
+              </div>
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="event_date">Fecha</label>
+                  <input id="event_date" name="date" type="text" placeholder="Ej: 16-19 ABR 2026" required>
+                </div>
+                <div class="form-field">
+                  <label for="event_location">Lugar</label>
+                  <input id="event_location" name="location" type="text" placeholder="Ciudad, País" required>
+                </div>
               </div>
               <div class="form-field">
-                <label for="event_location">Lugar</label>
-                <input id="event_location" name="location" type="text" placeholder="Ciudad, País" required>
-              </div>
-            </div>
-            <div class="form-field">
-              <label for="event_desc">Descripción</label>
-              <input id="event_desc" name="description" type="text" required>
-            </div>
-            <div class="form-field">
-              <label for="event_tag">Etiqueta</label>
-              <input id="event_tag" name="tag" type="text" placeholder="Nacional o Europa" required>
-            </div>
-            <button class="btn glass primary" type="submit">Guardar competición</button>
-          </form>
-        </div>
-
-        <div class="admin-card glass-card">
-          <h3>Competiciones actuales (editar, ordenar y borrar)</h3>
-          <ul class="admin-list admin-list-compact">
-            {{EVENT_LIST}}
-          </ul>
-        </div>
-
-        <div class="admin-card glass-card">
-          <h3>Agregar vídeo o foto</h3>
-          <form class="admin-form" action="/admin/videos/add" method="post" enctype="multipart/form-data">
-            <div class="form-field">
-              <label for="video_title">Título</label>
-              <input id="video_title" name="title" type="text" required>
-            </div>
-            <div class="form-row">
-              <div class="form-field">
-                <label for="video_tag">Etiqueta</label>
-                <input id="video_tag" name="tag" type="text" required>
+                <label for="event_desc">Descripción</label>
+                <input id="event_desc" name="description" type="text" required>
               </div>
               <div class="form-field">
-                <label for="video_layout">Diseño</label>
-                <select id="video_layout" name="layout">
-                  <option value="">Normal</option>
-                  <option value="tall">Tall</option>
-                  <option value="wide">Wide</option>
-                </select>
+                <label for="event_tag">Etiqueta</label>
+                <input id="event_tag" name="tag" type="text" placeholder="Nacional o Europa" required>
               </div>
-            </div>
-            <div class="form-field">
-              <label for="video_desc">Descripción</label>
-              <input id="video_desc" name="description" type="text" required>
-            </div>
-            <div class="form-field">
-              <label for="video_url">URL externa (opcional)</label>
-              <input id="video_url" name="video_url" type="url" placeholder="https://">
-            </div>
-            <div class="form-field">
-              <label for="video_file">Subir archivo (mp4, webm, ogg, jpg, png, webp)</label>
-              <input id="video_file" name="video_file" type="file" accept="video/mp4,video/webm,video/ogg,image/png,image/jpeg,image/webp">
-            </div>
-            <button class="btn glass primary" type="submit">Guardar vídeo/foto</button>
-          </form>
-          <p class="admin-note">Si no subes archivo, se mostrará placeholder con el enlace externo.</p>
-        </div>
-
-        <div class="admin-card glass-card">
-          <h3>Vídeos/fotos actuales (editar, ordenar y borrar)</h3>
-          <div class="form-field">
-            <label for="video_admin_search">Buscar vídeo/foto</label>
-            <input id="video_admin_search" type="text" placeholder="Filtrar por título, etiqueta o texto...">
+              <button class="btn glass primary" type="submit">Guardar competición</button>
+            </form>
           </div>
-          <ul class="admin-list admin-list-compact">
-            {{VIDEO_LIST}}
-          </ul>
-        </div>
 
-        <div class="admin-card glass-card">
-          <h3>Configuración SMTP</h3>
-          <form class="admin-form" action="/admin/settings" method="post">
-            <div class="form-row">
-              <div class="form-field">
-                <label for="smtp_host">Servidor SMTP</label>
-                <input id="smtp_host" name="smtp_host" type="text" value="{{SMTP_HOST}}">
-              </div>
-              <div class="form-field">
-                <label for="smtp_port">Puerto</label>
-                <input id="smtp_port" name="smtp_port" type="number" value="{{SMTP_PORT}}">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-field">
-                <label for="smtp_user">Usuario SMTP</label>
-                <input id="smtp_user" name="smtp_user" type="text" value="{{SMTP_USER}}">
-              </div>
-              <div class="form-field">
-                <label for="smtp_pass">Contraseña de aplicación</label>
-                <input id="smtp_pass" name="smtp_pass" type="password" value="{{SMTP_PASS}}" placeholder="Dejar vacío para mantener la actual" autocomplete="new-password">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-field">
-                <label for="smtp_from">Nombre remitente</label>
-                <input id="smtp_from" name="smtp_from" type="text" value="{{SMTP_FROM}}">
-              </div>
-              <div class="form-field">
-                <label for="smtp_admin">Email admin</label>
-                <input id="smtp_admin" name="smtp_admin" type="email" value="{{SMTP_ADMIN}}">
-              </div>
-            </div>
-            <div class="form-row">
-              <label class="checkbox-field">
-                <input type="checkbox" name="smtp_enabled" {{SMTP_ENABLED}}>
-                Activar envío SMTP
-              </label>
-              <label class="checkbox-field">
-                <input type="checkbox" name="smtp_tls" {{SMTP_TLS}}>
-                Usar STARTTLS
-              </label>
-            </div>
-            <button class="btn glass primary" type="submit">Guardar SMTP</button>
-          </form>
-          <p class="admin-note">Recomendado: configurar credenciales SMTP como variables de entorno en Render (`AURA_SMTP_*`).</p>
-        </div>
+          <div class="admin-card glass-card">
+            <h3>Competiciones actuales (editar, ordenar y borrar)</h3>
+            <ul class="admin-list admin-list-compact">
+              {{EVENT_LIST}}
+            </ul>
+          </div>
 
-        <div class="admin-card glass-card">
-          <h3>Sesión</h3>
-          <form class="admin-form" action="/admin/logout" method="post">
-            <button class="btn glass ghost" type="submit">Cerrar sesión</button>
-          </form>
-          <p class="admin-note">Usuario y contraseña por defecto: admin / admin.</p>
+          <div class="admin-card glass-card">
+            <h3>Agregar vídeo o foto</h3>
+            <form class="admin-form" action="/admin/videos/add" method="post" enctype="multipart/form-data">
+              <div class="form-field">
+                <label for="video_title">Título</label>
+                <input id="video_title" name="title" type="text" required>
+              </div>
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="video_tag">Etiqueta</label>
+                  <input id="video_tag" name="tag" type="text" required>
+                </div>
+                <div class="form-field">
+                  <label for="video_layout">Diseño</label>
+                  <select id="video_layout" name="layout">
+                    <option value="">Normal</option>
+                    <option value="tall">Tall</option>
+                    <option value="wide">Wide</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-field">
+                <label for="video_desc">Descripción</label>
+                <input id="video_desc" name="description" type="text" required>
+              </div>
+              <div class="form-field">
+                <label for="video_url">URL externa (opcional)</label>
+                <input id="video_url" name="video_url" type="url" placeholder="https://">
+              </div>
+              <div class="form-field">
+                <label for="video_file">Subir archivo (mp4, webm, ogg, jpg, png, webp)</label>
+                <input id="video_file" name="video_file" type="file" accept="video/mp4,video/webm,video/ogg,image/png,image/jpeg,image/webp">
+              </div>
+              <button class="btn glass primary" type="submit">Guardar vídeo/foto</button>
+            </form>
+            <p class="admin-note">Si no subes archivo, se mostrará placeholder con el enlace externo.</p>
+          </div>
+
+          <div class="admin-card glass-card">
+            <h3>Vídeos/fotos actuales (editar, ordenar y borrar)</h3>
+            <div class="form-field">
+              <label for="video_admin_search">Buscar vídeo/foto</label>
+              <input id="video_admin_search" type="text" placeholder="Filtrar por título, etiqueta o texto...">
+            </div>
+            <ul class="admin-list admin-list-compact">
+              {{VIDEO_LIST}}
+            </ul>
+          </div>
+
+          <div class="admin-card glass-card">
+            <h3>Configuración SMTP</h3>
+            <form class="admin-form" action="/admin/settings" method="post">
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="smtp_host">Servidor SMTP</label>
+                  <input id="smtp_host" name="smtp_host" type="text" value="{{SMTP_HOST}}">
+                </div>
+                <div class="form-field">
+                  <label for="smtp_port">Puerto</label>
+                  <input id="smtp_port" name="smtp_port" type="number" value="{{SMTP_PORT}}">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="smtp_user">Usuario SMTP</label>
+                  <input id="smtp_user" name="smtp_user" type="text" value="{{SMTP_USER}}">
+                </div>
+                <div class="form-field">
+                  <label for="smtp_pass">Contraseña de aplicación</label>
+                  <input id="smtp_pass" name="smtp_pass" type="password" value="{{SMTP_PASS}}" placeholder="Dejar vacío para mantener la actual" autocomplete="new-password">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="smtp_from">Nombre remitente</label>
+                  <input id="smtp_from" name="smtp_from" type="text" value="{{SMTP_FROM}}">
+                </div>
+                <div class="form-field">
+                  <label for="smtp_admin">Email admin</label>
+                  <input id="smtp_admin" name="smtp_admin" type="email" value="{{SMTP_ADMIN}}">
+                </div>
+              </div>
+              <div class="form-row">
+                <label class="checkbox-field">
+                  <input type="checkbox" name="smtp_enabled" {{SMTP_ENABLED}}>
+                  Activar envío SMTP
+                </label>
+                <label class="checkbox-field">
+                  <input type="checkbox" name="smtp_tls" {{SMTP_TLS}}>
+                  Usar STARTTLS
+                </label>
+              </div>
+              <button class="btn glass primary" type="submit">Guardar SMTP</button>
+            </form>
+            <p class="admin-note">Recomendado: configurar credenciales SMTP como variables de entorno en Render (`AURA_SMTP_*`).</p>
+          </div>
+
+          <div class="admin-card glass-card">
+            <h3>Sesión</h3>
+            <form class="admin-form" action="/admin/logout" method="post">
+              <button class="btn glass ghost" type="submit">Cerrar sesión</button>
+            </form>
+            <p class="admin-note">Usuario y contraseña por defecto: admin / admin.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container admin-stack admin-section-panel" data-admin-section-panel="alumnos" hidden>
+        {{COACH_DASHBOARD}}
+        {{PLAN_EDITOR}}
+
+        <div class="admin-grid">
+          <div class="admin-card glass-card">
+            <h3>Crear alumno</h3>
+            <form class="admin-form" action="/admin/clients/add" method="post">
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="client_username">Usuario</label>
+                  <input id="client_username" name="client_username" type="text" required>
+                </div>
+                <div class="form-field">
+                  <label for="client_password">Contraseña</label>
+                  <input id="client_password" name="client_password" type="password" required>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="client_email">Email</label>
+                  <input id="client_email" name="client_email" type="email" required>
+                </div>
+                <div class="form-field">
+                  <label for="client_skill">Skill</label>
+                  <input id="client_skill" name="client_skill" type="text">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-field">
+                  <label for="client_level">Nivel</label>
+                  <input id="client_level" name="client_level" type="text">
+                </div>
+                <div class="form-field">
+                  <label for="client_goal">Objetivo</label>
+                  <input id="client_goal" name="client_goal" type="text">
+                </div>
+              </div>
+              <div class="form-field">
+                <label for="client_concerns">Inquietudes</label>
+                <input id="client_concerns" name="client_concerns" type="text">
+              </div>
+              <label class="checkbox-field">
+                <input type="checkbox" name="client_approved" checked>
+                Activar alumno al crear
+              </label>
+              <button class="btn glass primary" type="submit">Crear alumno</button>
+            </form>
+          </div>
+
+          <div class="admin-card glass-card">
+            <h3>Solicitudes de alumnos</h3>
+            <ul class="admin-list">
+              {{APPLICATION_LIST}}
+            </ul>
+          </div>
         </div>
       </div>
     </main>
