--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css?v=20260217-2">
   </head>
   <body>
     <div class="noise" aria-hidden="true"></div>
@@ -354,6 +354,6 @@
       <div class="footer-bottom">Aura Calistenia - 2026</div>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="/script.js?v=20260217-2"></script>
   </body>
 </html>
