--- a/portal.html
+++ b/portal.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css?v=20260217-2">
   </head>
   <body class="admin-body portal-body">
     <div class="noise" aria-hidden="true"></div>
@@ -37,6 +37,6 @@
         {{PORTAL_CONTENT}}
       </div>
     </main>
-    <script src="/script.js"></script>
+    <script src="/script.js?v=20260217-2"></script>
   </body>
 </html>
